# Belfast-Kats-Katas

./: README.md
2015-12_four-points-determine-a-square/: README.md
2016-01_hotel-room-numbering/: README.md
2016-01_hotel-room-numbering/haskell_rsantos/: ChangeLog.md  fkata.cabal
2016-04_99-bottles-of-beer/: .song.erl.swp  README.md
2016-04_99-bottles-of-beer/erlang_elixir_roger-simms/: README.md  bottles.erl  bottles.exs
2016-04_99-bottles-of-beer/erlang_tim-cooke/: README.md  song.erl  song_tests.erl
2016-04_99-bottles-of-beer/haskell_philip-lawson/: bottles-o-beer.cabal
2016-04_99-bottles-of-beer/haskell_philip-lawson/app/: Main.hs
2016-04_99-bottles-of-beer/haskell_philip-lawson/src/: CountDown.hs
2016-04_99-bottles-of-beer/haskell_philip-lawson/test/: Spec.hs
2016-04_99-bottles-of-beer/haskell_rsantos/: fkata.cabal
2016-04_99-bottles-of-beer/kotlin_gareth-fleming/: Song.kt
2016-04_99-bottles-of-beer/python_dylan-wylie/: __main__.py  bottles.py  bottles_test.py
2016-04_99-bottles-of-beer/scala_diogo-castro/: README.md  build.sbt
2016-04_99-bottles-of-beer/scala_haskell_idris_james_bunch/: Bottles.hs  Bottles.scala  README.md  Tests.hs  bottles.idr
2016-06-15_Concatenate_N_N_Times/: README.md
2016-06-15_Concatenate_N_N_Times/Q_rahulAs/: kata.q
2016-06-15_Concatenate_N_N_Times/clojure_tim-cooke/: README.md  project.clj
2016-06-15_Concatenate_N_N_Times/haskell_chris-van-es/: kata.cabal
2016-06-15_Concatenate_N_N_Times/haskell_rsantos/: LICENSE
2016-10-26_earthquake_monitoring/: README.md
(+27 files in other folders)
