name:                bottles-o-beer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/bottles-o-beer#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Lawson
maintainer:          example@example.com
copyright:           2016 Philip Lawson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CountDown  
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bottles-o-beer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , QuickCheck
                     , HUnit
                     , bottles-o-beer
  default-language:    Haskell2010

test-suite bottles-o-beer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , HUnit
                     , bottles-o-beer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bottles-o-beer
